--- a/files/en-us/learn/server-side/django/generic_views/index.html
+++ b/files/en-us/learn/server-side/django/generic_views/index.html
@@ -501,11 +501,11 @@ def book_detail_view(request, primary_key):
 
 <p>Click the <strong>All books</strong> link to display the list of books. </p>
 
-<p><img alt="Book List Page" src="book_list_page_no_pagination.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Book List Page" src="book_list_page_no_pagination.png"></p>
 
 <p>Then click a link to one of your books. If everything is set up correctly, you should see something like the following screenshot.</p>
 
-<p><img alt="Book Detail Page" src="book_detail_page_no_pagination.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Book Detail Page" src="book_detail_page_no_pagination.png"></p>
 
 <h2 id="Pagination">Pagination</h2>
 
@@ -563,7 +563,7 @@ def book_detail_view(request, primary_key):
 
 <p>The pagination links are displayed on the bottom, with next/previous links being displayed depending on which page you're on.</p>
 
-<p><img alt="Book List Page - paginated" src="book_list_paginated.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Book List Page - paginated" src="book_list_paginated.png"></p>
 
 <h2 id="Challenge_yourself">Challenge yourself</h2>
 
@@ -589,9 +589,9 @@ def book_detail_view(request, primary_key):
 
 <p>When you are finished, your pages should look something like the screenshots below.</p>
 
-<p><img alt="Author List Page" src="author_list_page_no_pagination.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Author List Page" src="author_list_page_no_pagination.png"></p>
 
-<p><img alt="Author Detail Page" src="author_detail_page_no_pagination.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Author Detail Page" src="author_detail_page_no_pagination.png"></p>
 
 <h2 id="Summary">Summary</h2>
 
