--- a/files/en-us/learn/server-side/django/introduction/index.html
+++ b/files/en-us/learn/server-side/django/introduction/index.html
@@ -94,7 +94,7 @@ tags:
 
 <p>Django web applications typically group the code that handles each of these steps into separate files:</p>
 
-<p><img alt="" src="basic-django.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Django - files for views, model, urls, template" src="basic-django.png"></p>
 
 <ul>
  <li><strong>URLs: </strong>While it is possible to process requests from every single URL via a single function, it is much more maintainable to write a separate view function to handle each resource. A URL mapper is used to redirect HTTP requests to the appropriate view based on the request URL. The URL mapper can also match particular patterns of strings or digits that appear in a URL and pass these to a view function as data.</li>
