--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/book_detail_page/index.html
@@ -107,7 +107,7 @@ block content
 
 <p>Run the application and open your browser to <a href="http://localhost:3000/">http://localhost:3000/</a>. Select the <em>All books</em> link, then select one of the books. If everything is set up correctly, your page should look something like the following screenshot.</p>
 
-<p><img alt="Book Detail Page - Express Local Library site" src="locallibary_express_book_detail.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Book Detail Page - Express Local Library site" src="locallibary_express_book_detail.png"></p>
 
 <h2 id="Next_steps">Next steps</h2>
 
