--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/home_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/home_page/index.html
@@ -127,7 +127,7 @@ block content
 
 <p>At this point we should have created everything needed to display the index page. Run the application and open your browser to <a href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>. If everything is set up correctly, your site should look something like the following screenshot.</p>
 
-<p><img alt="Home page - Express Local Library site" src="locallibary_express_home.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Home page - Express Local Library site" src="locallibary_express_home.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> You won't be able to <em>use</em> the sidebar links yet because the urls, views, and templates for those pages haven't been defined. If you try you'll get errors like "NOT IMPLEMENTED: Book list" for example, depending on the link you click on.  These string literals (which will be replaced with proper data) were specified in the different controllers that live inside your "controllers" file.</p>
