--- a/files/en-us/learn/server-side/express_nodejs/forms/create_author_form/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/create_author_form/index.html
@@ -136,7 +136,7 @@ block content
 
 <p>Run the application, open your browser to <a href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>, then select the <em>Create new author</em> link. If everything is set up correctly, your site should look something like the following screenshot. After you enter a value, it should be saved and you'll be taken to the author detail page.</p>
 
-<p><img alt="Author Create Page - Express Local Library site" src="locallibary_express_author_create_empty.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Author Create Page - Express Local Library site" src="locallibary_express_author_create_empty.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> If you experiment with various input formats for the dates, you may find that the format <code>yyyy-mm-dd</code> misbehaves. This is because JavaScript treats date strings as including the time of 0 hours, but additionally treats date strings in that format (the ISO 8601 standard) as including the time 0 hours UTC, rather than the local time. If your time zone is west of UTC, the date display, being local, will be one day before the date you entered. This is one of several complexities (such as multi-word family names and multi-author books) that we are not addressing here.</p>
