--- a/files/en-us/learn/server-side/express_nodejs/forms/create_book_form/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/create_book_form/index.html
@@ -203,7 +203,7 @@ block content
 
 <p>Run the application, open your browser to <a href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>, then select the <em>Create new book</em> link. If everything is set up correctly, your site should look something like the following screenshot. After you submit a valid book, it should be saved and you'll be taken to the book detail page.</p>
 
-<p><img alt="" src="locallibary_express_book_create_empty.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="" src="locallibary_express_book_create_empty.png"></p>
 
 <h2 id="Next_steps">Next steps</h2>
 
