--- a/files/en-us/learn/server-side/express_nodejs/forms/delete_author_form/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/delete_author_form/index.html
@@ -143,7 +143,7 @@ p
 
 <p>The control should now appear as a link, as shown below on the <em>Author detail</em> page.</p>
 
-<p><img alt="" src="locallibary_express_author_detail_delete.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="locallibary_express_author_detail_delete.png"></p>
 
 <h2 id="What_does_it_look_like">What does it look like?</h2>
 
@@ -151,11 +151,11 @@ p
 
 <p>If the author has no books, you'll be presented with a page like this. After pressing delete, the server will delete the author and redirect to the author list.</p>
 
-<p><img alt="" src="locallibary_express_author_delete_nobooks.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="locallibary_express_author_delete_nobooks.png"></p>
 
 <p>If the author does have books, then you'll be presented with a view like the following. You can then delete the books from their detail pages (once that code is implemented!).</p>
 
-<p><img alt="" src="locallibary_express_author_delete_withbooks.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="locallibary_express_author_delete_withbooks.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> The other pages for deleting objects can be implemented in much the same way. We've left that as a challenge.</p>
