--- a/files/en-us/learn/server-side/express_nodejs/forms/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/index.html
@@ -46,7 +46,7 @@ tags:
 
 <p>First a brief overview of <a href="/en-US/docs/Learn/Forms">HTML Forms</a>. Consider a simple HTML form, with a single text field for entering the name of some "team", and its associated label:</p>
 
-<p><img alt="Simple name field example in HTML form" src="form_example_name_field.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Simple name field example in HTML form" src="form_example_name_field.png"></p>
 
 <p>The form is defined in HTML as a collection of elements inside <code>&lt;form&gt;...&lt;/form&gt;</code> tags, containing at least one <code>input</code> element of <code>type="submit"</code>.</p>
 
