--- a/files/en-us/learn/server-side/express_nodejs/forms/update_book_form/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/forms/update_book_form/index.html
@@ -180,7 +180,7 @@ exports.book_update_post = [
 
 <p>The form should look just like the <em>Create book</em> page, only with a title of 'Update book', and pre-populated with record values.</p>
 
-<p><img alt="" src="locallibary_express_book_update_noerrors.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="locallibary_express_book_update_noerrors.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> The other pages for updating objects can be implemented in much the same way. We've left that as a challenge.</p>
