--- a/files/en-us/learn/server-side/express_nodejs/skeleton_website/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/skeleton_website/index.html
@@ -212,7 +212,7 @@ npm install</pre>
 
 <p>You should see a browser page that looks like this:</p>
 
-<p><img alt="Browser for default Express app generator website" src="expressgeneratorskeletonwebsite.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Browser for default Express app generator website" src="expressgeneratorskeletonwebsite.png"></p>
 
 <p>Congratulations! You now have a working Express application that can be accessed via port 3000.</p>
 
