--- a/files/en-us/learn/server-side/django/forms/index.html
+++ b/files/en-us/learn/server-side/django/forms/index.html
@@ -37,7 +37,7 @@ tags:
 
 <p>While we haven't created any forms in this tutorial so far, we've already encountered them in the Django Admin site — for example, the screenshot below shows a form for editing one of our <a href="/en-US/docs/Learn/Server-side/Django/Models">Book</a> models, comprised of a number of selection lists and text editors.</p>
 
-<p><img alt="Admin Site - Book Add" src="admin_book_add.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Admin Site - Book Add" src="admin_book_add.png"></p>
 
 <p>Working with forms can be complicated! Developers need to write HTML for the form, validate and properly sanitize entered data on the server (and possibly also in the browser), repost the form with error messages to inform users of any invalid fields, handle the data when it has successfully been submitted, and finally respond to the user in some way to indicate success. <em>Django Forms</em> take a lot of the work out of all these steps, by providing a framework that lets you define forms and their fields programmatically, and then use these objects to both generate the form HTML code and handle much of the validation and user interaction.</p>
 
@@ -47,7 +47,7 @@ tags:
 
 <p>First a brief overview of <a href="/en-US/docs/Learn/Forms">HTML Forms</a>. Consider a simple HTML form, with a single text field for entering the name of some "team", and its associated label:</p>
 
-<p><img alt="Simple name field example in HTML form" src="form_example_name_field.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Simple name field example in HTML form" src="form_example_name_field.png"></p>
 
 <p>The form is defined in HTML as a collection of elements inside <code>&lt;form&gt;...&lt;/form&gt;</code> tags, containing at least one <code>input</code> element of <code>type="submit"</code>.</p>
 
@@ -81,7 +81,7 @@ tags:
 
 <p>A process flowchart of how Django handles form requests is shown below, starting with a request for a page containing a form (shown in green).</p>
 
-<p><img alt="Updated form handling process doc." src="form_handling_-_standard.png" style="display: block; margin: 0px auto;"></p>
+<p><img alt="Updated form handling process doc." src="form_handling_-_standard.png"></p>
 
 <p>Based on the diagram above, the main things that Django's form handling does are:</p>
 
@@ -455,15 +455,15 @@ def renew_book_librarian(request, pk):
 
 <p>If you are successful, the default form will look like this:</p>
 
-<p><img alt="" src="forms_example_renew_default.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="forms_example_renew_default.png"></p>
 
 <p>The form with an invalid value entered will look like this:</p>
 
-<p><img alt="" src="forms_example_renew_invalid.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="forms_example_renew_invalid.png"></p>
 
 <p>The list of all books with renew links will look like this:</p>
 
-<p><img alt="" src="forms_example_renew_allbooks.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="forms_example_renew_allbooks.png"></p>
 
 <h2 id="ModelForms">ModelForms</h2>
 
@@ -632,7 +632,7 @@ class AuthorDelete(DeleteView):
 
 <p>Then navigate to the author create page: <a href="http://127.0.0.1:8000/catalog/author/create/">http://127.0.0.1:8000/catalog/author/create/</a>, which should look like the screenshot below.</p>
 
-<p><img alt="Form Example: Create Author" src="forms_example_create_author.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Form Example: Create Author" src="forms_example_create_author.png"></p>
 
 <p>Enter values for the fields and then press <strong>Submit</strong> to save the author record. You should now be taken to a detail view for your new author, with a URL of something like <em>http://127.0.0.1:8000/catalog/author/10</em>.</p>
 
@@ -640,13 +640,13 @@ class AuthorDelete(DeleteView):
 
 <p>Finally, we can delete the page by appending delete to the end of the author detail-view URL (e.g. <em>http://127.0.0.1:8000/catalog/author/10/delete/</em>). Django should display the delete page shown below. Press "<strong>Yes, delete.</strong>" to remove the record and be taken to the list of all authors.</p>
 
-<p><img alt="" src="forms_example_delete_author.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="forms_example_delete_author.png"></p>
 
 <h2 id="Challenge_yourself">Challenge yourself</h2>
 
 <p>Create some forms to create, edit, and delete <code>Book</code> records. You can use exactly the same structure as for <code>Authors</code>. If your <strong>book_form.html</strong> template is just a copy-renamed version of the <strong>author_form.html</strong> template, then the new "create book" page will look like the screenshot below:</p>
 
-<p><img alt="" src="forms_example_create_book.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="" src="forms_example_create_book.png"></p>
 
 <h2 id="Summary">Summary</h2>
 
