--- a/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/development_environment/index.html
@@ -365,7 +365,7 @@ DEBUG=helloworld:* npm start
 
 <p>Open a browser and navigate to <a href="http://127.0.0.1:3000/">http://127.0.0.1:3000/</a> to see the default Express welcome page.</p>
 
-<p><img alt="Express - Generated App Default Screen" src="express_default_screen.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Express - Generated App Default Screen" src="express_default_screen.png"></p>
 
 <p>We'll talk more about the generated app when we get to the article on generating a skeleton application.</p>
 
