--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/author_detail_page/index.html
@@ -80,7 +80,7 @@ block content
 
 <p>Run the application and open your browser to <a href="http://localhost:3000/">http://localhost:3000/</a>. Select the <em>All Authors</em> link, then select one of the authors. If everything is set up correctly, your site should look something like the following screenshot.</p>
 
-<p><img alt="Author Detail Page - Express Local Library site" src="locallibary_express_author_detail.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Author Detail Page - Express Local Library site" src="locallibary_express_author_detail.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> The appearance of the author <em>lifespan</em> dates is ugly! We'll address that in the final challenge in this article.</p>
