--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/bookinstance_list_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/bookinstance_list_page/index.html
@@ -64,7 +64,7 @@ block content
 
 <p>Run the application, open your browser to <a href="http://localhost:3000/" rel="noopener">http://localhost:3000/</a>, then select the <em>All book-instances</em> link. If everything is set up correctly, your site should look something like the following screenshot.</p>
 
-<p><img alt="BookInstance List Page - Express Local Library site" src="locallibary_express_bookinstance_list.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="BookInstance List Page - Express Local Library site" src="locallibary_express_bookinstance_list.png"></p>
 
 <h2 id="Next_steps">Next steps</h2>
 
