--- a/files/en-us/learn/server-side/express_nodejs/displaying_data/genre_detail_page/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/displaying_data/genre_detail_page/index.html
@@ -97,7 +97,7 @@ block content
 
 <p>Run the application and open your browser to <a href="http://localhost:3000/">http://localhost:3000/</a>. Select the <em>All genres</em> link, then select one of the genres (e.g. "Fantasy"). If everything is set up correctly, your page should look something like the following screenshot.</p>
 
-<p><img alt="Genre Detail Page - Express Local Library site" src="locallibary_express_genre_detail.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
+<p><img alt="Genre Detail Page - Express Local Library site" src="locallibary_express_genre_detail.png"></p>
 
 <div class="notecard note">
 <p><strong>Note:</strong> You might get an error similar to this:</p>
