--- a/files/en-us/learn/server-side/express_nodejs/mongoose/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/mongoose/index.html
@@ -527,9 +527,9 @@ SomeModel.find(callback_function);</pre>
 
 <ol>
  <li>Click <strong>Build a Cluster</strong> button in the Clusters Overview section.<br>
-  <img alt="Create a cluster on MongoDB Atlas." src="mongodb_atlas_-_createcluster.jpg" style="border-style: solid; border-width: 1px;"></li>
+  <img alt="Create a cluster on MongoDB Atlas." src="mongodb_atlas_-_createcluster.jpg"></li>
  <li>This will open the <em>Create New Cluster</em> screen.<br>
-  <img alt="Choose a cloud provider when using MongoDB Atlas." src="mongodb_atlas_-_chooseproviderregion.jpg" style="border-style: solid; border-width: 1px;">
+  <img alt="Choose a cloud provider when using MongoDB Atlas." src="mongodb_atlas_-_chooseproviderregion.jpg">
   <ul>
    <li>Select any provider from the <em>Cloud Provider &amp; Region</em> section. Different providers offer different regions.</li>
    <li>Select any region marked "FREE TIER AVAILABLE".</li>
@@ -538,7 +538,7 @@ SomeModel.find(callback_function);</pre>
  </li>
  <li>
   <p>You will return to the <em>Cluster Overview</em> screen.<br>
-   <img alt="Setup a collection on MongoDB Atlas." src="mongodb_atlas_-_createcollection.jpg" style="border-style: solid; border-width: 1px;"></p>
+   <img alt="Setup a collection on MongoDB Atlas." src="mongodb_atlas_-_createcollection.jpg"></p>
 
   <ul>
    <li>
@@ -547,13 +547,13 @@ SomeModel.find(callback_function);</pre>
   </ul>
  </li>
  <li>This will open the <em>Collections</em> section.<br>
-  <img alt="Create a database on MongoDB Atlas." src="mongodb_atlas_-_createdatabase2.png" style="border-style: solid; border-width: 1px;">
+  <img alt="Create a database on MongoDB Atlas." src="mongodb_atlas_-_createdatabase2.png">
   <ul>
    <li>Click the <strong>Add My Own Data</strong> button.</li>
   </ul>
  </li>
  <li>This will open the <em>Create Database</em> screen.<br>
-  <img alt="Details during database creation on MongoDB Atlas." src="mongodb_atlas_-_databasedetails.jpg" style="border-style: solid; border-width: 1px;">
+  <img alt="Details during database creation on MongoDB Atlas." src="mongodb_atlas_-_databasedetails.jpg">
   <ul>
    <li>Enter the name for the new database as <code>local_library</code>.</li>
    <li>Enter the name of the collection as <code>Collection0</code>.</li>
@@ -561,13 +561,13 @@ SomeModel.find(callback_function);</pre>
   </ul>
  </li>
  <li>You will return to the Collection screen with your database created.<br>
-  <img alt="Database creation confirmation on MongoDB Atlas." src="mongodb_atlas_-_databasecreated.jpg" style="border-style: solid; border-width: 1px;">
+  <img alt="Database creation confirmation on MongoDB Atlas." src="mongodb_atlas_-_databasecreated.jpg">
   <ul>
    <li>Click the <em>Overview</em> tab to return the cluster overview.</li>
   </ul>
  </li>
  <li>From the Cluster0 Overview screen click the <strong>Connect</strong> button.<br>
-  <img alt="Configure a connection when after setting up a cluster in MongoDB Atlas." src="mongodb_atlas_-_connectbutton.jpg" style="border-style: solid; border-width: 1px;"></li>
+  <img alt="Configure a connection when after setting up a cluster in MongoDB Atlas." src="mongodb_atlas_-_connectbutton.jpg"></li>
  <li>This will open the Connect to Cluster screen.<br>
   <img alt="Choose a connection type when connecting with MongoDB Atlas." src="connect_to_cluster_allowanywhere.png">
   <ul>
@@ -587,13 +587,13 @@ SomeModel.find(callback_function);</pre>
   </ul>
  </li>
  <li>You should now be able to access the <em>Choose a connection</em> method tab.<br>
-  <img alt="Choose a connection type when connecting with MongoDB Atlas." src="mongodb_atlas_-_chooseaconnectionmethod.jpg" style="border-style: solid; border-width: 1px;">
+  <img alt="Choose a connection type when connecting with MongoDB Atlas." src="mongodb_atlas_-_chooseaconnectionmethod.jpg">
   <ul>
    <li>Click the <strong>Connect Your Application</strong> option.</li>
   </ul>
  </li>
  <li>This will open the <em>Connect</em> screen.<br>
-  <img alt="Choose the Short SRV connection when setting up a connection on MongoDB Atalas." src="mongodb_atlas_-_connectforshortsrv_2020-03.png" style="border-style: solid; border-width: 1px;">
+  <img alt="Choose the Short SRV connection when setting up a connection on MongoDB Atalas." src="mongodb_atlas_-_connectforshortsrv_2020-03.png">
   <ul>
    <li>Click the <strong>Copy</strong> button to copy the connection string.</li>
    <li>Save this string somewhere safe.</li>
